--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ alembic==1.5.8
 blinker==1.4
 click==7.1.2
 Flask==1.1.2
+Flask-HTTPAuth==4.3.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.7.0
+flask-redis==0.4.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.0.0
 itsdangerous==1.1.0
@@ -13,6 +15,7 @@ MarkupSafe==1.1.1
 psycopg2==2.8.6
 python-dateutil==2.8.1
 python-editor==1.0.4
+redis==3.5.3
 six==1.15.0
 SQLAlchemy==1.4.12
 Werkzeug==1.0.1
