--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 alembic==1.5.8
 blinker==1.4
+chardet==4.0.0
 click==7.1.2
+filetype==1.0.7
 Flask==1.1.2
 Flask-HTTPAuth==4.3.0
 Flask-Mail==0.9.1
@@ -10,6 +12,7 @@ Flask-SQLAlchemy==2.5.1
 greenlet==1.0.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
+levenshtein==0.12.0
 Mako==1.1.4
 MarkupSafe==1.1.1
 psycopg2==2.8.6
